--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,31 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.grid-layout {
+  display: grid;
+  min-height: 100vh;
+  height: auto;
+  grid-template-columns: auto;
+  grid-template-rows: auto 1fr auto;
+  grid-template-areas:
+      "header"
+      "content"
+      "footer";
+}
+
+.grid-header {
+  grid-area: header;
+}
+
+.grid-main {
+  grid-area: content;
+}
+
+.grid-footer {
+  grid-area: footer;
+}
+
+input:focus{
+  outline: none;
+}
