All major pages added empty, Catalog categories layouts done, SystemUnits displayed from the backend

--- a/src/index.css
+++ b/src/index.css
@@ -43,3 +43,36 @@ code {
 input:focus{
   outline: none;
 }
+
+.grid-login {
+  display: grid;
+  width: 100%;
+  grid-template-rows: 1fr 1fr 1fr;
+  grid-template-areas: "labels inputs placeholder";
+}
+
+.grid-labels
+{
+  grid-template-columns: 1fr 35% 1fr;
+}
+
+@media (min-width: 1024px) {
+  .grid-labels
+  {
+    grid-template-columns: 1fr 30% 1fr;
+  }
+}
+
+@media (min-width: 1280px) {
+  .grid-labels
+  {
+    grid-template-columns: 1fr 25% 1fr;
+  }
+}
+
+@media (min-width: 1800px) {
+  .grid-labels
+  {
+    grid-template-columns: 1fr 15% 1fr;
+  }
+}
