--- a/src/index.css
+++ b/src/index.css
@@ -56,6 +56,16 @@ input:focus{
   grid-template-columns: 1fr 35% 1fr;
 }
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+input[type=number] {
+    -moz-appearance: textfield;
+}
+
 @media (min-width: 1024px) {
   .grid-labels
   {
