--- a/src/index.css
+++ b/src/index.css
@@ -56,6 +56,16 @@ input:focus{
     grid-template-columns: 1fr 35% 1fr;
 }
 
+.grid-order
+{
+    grid-template-columns: auto 1fr;
+}
+
+.grid-order2
+{
+    grid-template-columns: 1fr auto;
+}
+
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
     -webkit-appearance: none;
@@ -68,6 +78,10 @@ input[type=number] {
 
 td, th {
     padding: 0.75rem 1rem;
+}
+
+select {
+    border-right: 0.75rem solid #F5F5F5;
 }
 
 @media (min-width: 1024px) {
